[tool.poetry]
name = "pyrunware"
version = "0.1.0"
description = ""
authors = ["whynotvoid"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
packages = [{ include = "pyrunware" }]
